# Method-section-generator

.github/workflows/: tests.yml
package/: pyproject.toml
package/src/pyaslreport/modalities/asl/: utils.py
package/src/pyaslreport/tests/: conftest.py  test_normalization.py
package/tests/: conftest.py  test_file_grouping.py  test_integration.py  test_m0_tsv_validation.py  test_normalization.py  test_package.py  test_validators.py
package/tests/integration/: runner.py
