[project]
name = "pyaslreport"
version = "0.0.3"
description = "A Python package for generating methods sections in for ASL parameters."
authors = [{ name="Ibrahim Abdelazim", email="ibrahim.abdelazim@fau.de" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PyYAML~=6.0.2",
    "numpy~=2.2.6",
    "nibabel~=5.3.2",
    "pydicom~=3.0.1",
    "dicom2nifti~=2.6.2",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"pyaslreport" = ["*.yaml", "**/*.yaml"]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "integration: integration tests requiring file fixtures (deselect with '-m \"not integration\"')",
    "slow: tests that take noticeably longer to run",
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["pyaslreport"]